# mission-python

./: **생성형AI시대의_평가자동화시스템_소개**.md  Mission-Python_프로젝트를_소개합니다.md  README.md  pyproject.toml
assets/: sample.csv
src/mission_python/: main.py
src/mission_python/log/: log.encrypted  log.temp  signature.encrypted
src/mission_python/util/: __init__.py  crypto.py  geolocation.py  utility.py
tests/: test_main.py
