[project]
name = "mission-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Sungwon Lee",email = "drsungwon@khu.ac.kr"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "mission_python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
