[project]
name = "mission-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Sungwon Lee",email = "drsungwon@khu.ac.kr"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography (>=45.0.6,<46.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "mission_python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
